[package]
name = "bincomb"
version = "0.1.0"
authors = ["Alexey Ryabov <6006l1k@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
crc = "3.2.1"
